[package]
name = "say"
description = "provide schemas protection for json, yaml, toml"
license = "MIT"
version = "0.0.1"
authors = ["Kilerd <blove694@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "say"
path = "src/bin/say.rs"
doc = false
required-features = ["binary"]


[features]
binary = ["structopt"]

[dependencies]
structopt = { version = "0.3.21", optional = true }
regex = "1.5.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
